--- a/localisation/english/ideologies_l_english.yml
+++ b/localisation/english/ideologies_l_english.yml
@@ -7,12 +7,12 @@
  nationalist:0 "Authoritarian Democracy"
  nationalist_noun:0 "Authoritarian democratic or nationalist regimes often take a conservative stance on social issues and promote liberal-capitalist economies with limited state intervention. The aim of these regimes is to maintain national stability and provide the people both a popular and responsible government."
  nationalist_desc:0 "Authoritarian Democrat"
- monarchist:0 "Autocrat"
+ monarchist:0 "Autocracy"
  monarchist_noun:0 "Autocracy is not a political ideology in the normal sense of the word, but rather a general term for the attitude these governments hold towards their citizens. The people are all subjects of the leader, either a king or a dictator, and it is the leader's job and duty to lead the state and society towards the righteous and best path while uniting the people of under his benevolent protection."
  monarchist_desc:0 "Autocracy"
- national_bolshevik:0 "National Maximism"
- national_bolshevik_noun:0 "National Maximalism is an ideology for a country that adopts principles of totalism and the need to create a pure nationalist race of people in the country. National Maximism rejects totalism, humanism, internationalism, liberalism, pacifism and Syndicalism but still embraces some concepts of the left."
- national_bolshevik_desc:0 "National Maximalism"
+ national_bolshevik:0 "National Totalism"
+ national_bolshevik_noun:0 "National Totalism is an ideology for a country that adopts principles of totalism and the need to create a pure nationalist race of people in the country. National Totalism rejects humanism, internationalism, liberalism, and pacifism but still embraces some concepts of the left."
+ national_bolshevik_desc:0 "National Totalism"
  national_conservative:0 "Conservative"
  national_conservative_noun:0 "Conservatism is a political ideology centered on preserving traditional beliefs, attitudes, and philosophy, as well as society's traditional power dynamics while generally adhering to the orthodox political system, which often times is democratic. In short, Conservatives want to keep society orderly and stable with little change."
  national_conservative_desc:0 "Conservatism"
@@ -25,9 +25,9 @@
  new_democrat:0 "Social Democrat"
  new_democrat_noun:0 "Social Democracy aims to reform capitalism and humanise it by aligning it with the ethical ideals of social welfare while maintaining the capitalist mode of production, rather than creating an alternative socialist economic system. While usually promoting a pluralistic form of government and a heavily regulated market economy, some more radical streams exist."
  new_democrat_desc:0 "Social Democracy"
- moderate_socialist:0 "Syndicalist"
- moderate_socialist_noun:0 "Syndicalism is defined by the concepts of revolutionary spontaneity and direct action - the belief that the workers themselves, organized in labour unions, must combat capitalism, instead of relying upon an external agent such as a political party.Syndicalist states are decentralized and federal, all industries are organized into syndicates, labour councils elected from these trade unions manage local governance, and central government is vested in a national congress of trade union representatives."
- moderate_socialist_desc:0 "Syndicalism"
+ moderate_socialist:0 "Socialism"
+ moderate_socialist_noun:0 "Socialism is INSERT HERE."
+ moderate_socialist_desc:0 "Socialism"
  revolutionary_socialist:0 "Radical Socialist"
  revolutionary_socialist_noun:0 "Radical Socialism is a catch-all phrase for the various socialist ideologies that aren't either a variant of syndicalism or totalism. Their ultimate goal is to create a paradise for the working class, the details of which varies from movement to movement."
  revolutionary_socialist_desc:0 "Radical Socialism"
@@ -111,7 +111,7 @@ social_democracy_desc:0 "Social democracy wishes to reform capitalism as well as
  fascist_drift:0 "Drift to National Populism"
  nationalist_drift:0 "Drift to Authoritarian Democracy"
  monarchist_drift:0 "Drift to Autocracy"
- national_bolshevik_drift:0 "Drift to National Bolshevism"
+ national_bolshevik_drift:0 "Drift to National Totalism"
  national_conservative_drift:0 "Drift to Conservatism"
  centrist_drift:0 "Drift to Centrism"
  liberal_drift:0 "Drift to Liberalism"
