--- a/localisation/KW_Canada_l_english.yml
+++ b/localisation/KW_Canada_l_english.yml
@@ -1,7 +1,13 @@
 ﻿l_english:
+
+	#Ideas
+
 	housing_crisis_idea:0 "The Housing Crisis"
 	Lost_Exile_Legitimacy_idea:0 "Eroded Exile Legitimacy"
 	Lost_Exile_Legitimacy_idea_desc:0 "The last exile died in 1989 at the ripe old age of 120. To this day the Royals speak with more of a Canadian accent than they do English.Can Canada really claim to be the legitimate English state."
 	Inflation_crisis_idea:0 "Inflation Crisis"
 	Totalist_Terrorism:0 "Totalism Terrorism"
 	Totalist_Terrorism_desc:0 "Justin Trudeau is a bane upon the existence of every Canadian regardless of class. Efforts to bring him to justice have revealed untold amounts of corruption."
+
+	#Focuses
+	
