Doesn't Crash Anymore
Sa

--- a/localisation/english/research_l_english.yml
+++ b/localisation/english/research_l_english.yml
@@ -542,9 +542,8 @@
  operational_integrity_tree:0 "Operational Integrity Doctrine"
  strategic_destruction_tree:0 "Strategic Destruction Doctrine"
  armor:0 "Armor technology"
- cat_light_armor:0 "Light Tank models"
- cat_medium_armor:0 "Medium Tank models"
- cat_heavy_armor:0 "Heavy Tank models"
+ cat_IFV_armor:0 "IFV models"
+ cat_MBT_armor:0 "MBT models"
  cat_anti_tank:0 "Anti-Tank"
  submarine_doctrine:0 "Submarine Operations Doctrines"
  MUTUALLY_EXCLUSIVE_TREE:0 "§TThe branches are mutually exclusive. Research can only progress in one of the branches.§!"
