--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -6612,25 +6612,25 @@ GUI_Guinea_ADJ:0 "Guinea"
  NOM_moderate_socialist_ADJ:0 "Norman"
  NOM_revolutionary_socialist_ADJ:0 "Norman"
  NOM_communist_ADJ:0 "Norman"
- SCO_fascist:0 "Greater Scotland"
+ SCO_fascist:0 "The Kingdom of Scotland"
  SCO_fascist_DEF:0 "Greater Scotland"
- SCO_nationalist:0 "Scottish State"
+ SCO_nationalist:0 "The Kingdom of Scotland"
  SCO_nationalist_DEF:0 "The Scottish State"
  SCO_monarchist:0 "Kingdom of Scotland"
  SCO_monarchist_DEF:0 "The Kingdom of Scotland"
- SCO_national_bolshevik:0 "Scottish People's Republic"
+ SCO_national_bolshevik:0 "The Kingdom of Scotland"
  SCO_national_bolshevik_DEF:0 "The Scottish People's Republic"
  SCO_national_conservative:0 "Scotland"
  SCO_national_conservative_DEF:0 "Scotland"
- SCO_centrist:0 "Scotland"
- SCO_centrist_DEF:0 "Scotland"
- SCO_liberal:0 "Scotland"
- SCO_liberal_DEF:0 "Scotland"
- SCO_new_democrat:0 "Scotland"
- SCO_new_democrat_DEF:0 "Scotland"
- SCO_moderate_socialist:0 "Scotland"
- SCO_moderate_socialist_DEF:0 "Scotland"
- SCO_revolutionary_socialist:0 "Scottish Socialist Republic"
+ SCO_centrist:0 "The Kingdom of Scotland"
+ SCO_centrist_DEF:0 "The Kingdom of Scotland"
+ SCO_liberal:0 "The Kingdom of Scotland"
+ SCO_liberal_DEF:0 "The Kingdom of Scotland"
+ SCO_new_democrat:0 "The Kingdom of Scotland"
+ SCO_new_democrat_DEF:0 "The Kingdom of Scotland"
+ SCO_moderate_socialist:0 "The Kingdom of Scotland"
+ SCO_moderate_socialist_DEF:0 "The Kingdom of Scotland"
+ SCO_revolutionary_socialist:0 "The Kingdom of Scotland"
  SCO_revolutionary_socialist_DEF:0 "The Scottish Socialist Republic"
  SCO_communist:0 "United Republic of Scotland"
  SCO_communist_DEF:0 "The United Republic of Scotland"
