--- a/localisation/english/events_l_english.yml
+++ b/localisation/english/events_l_english.yml
@@ -1278,6 +1278,9 @@ Scotland.26.t:0 "Scotland Fights Back"
  Scotland.46.o2:0 "Scottish Democrats"
  Scotland.46.o3:0 "Scottish Liberal Party"
  Scotland.46.o4:0 "Scottish Labour Party"
+ Scotland.46.o5:0 "Siol nan Gaidheal"
+ Scotland.46.o6:0 "Scottish Dawn"
+ Scotland.46.o7:0 "The Far Left Coalition"
  Scotland.47.t:0 "Building A New Friendship"
  Scotland.47.d:0 "Francis has spoken with his advisors and government that the next step for Scotland will be to start building new relations with the west such as the Empire of America and Canada, building a strong friendship will benefit Scotland such as being able to start working with each other to build strong economies while also creating a strong military partnership with the Ententé and spreading its influence on the British isle. Scotland can also look to its Celtic friends and what type of future they can share together in a united front."
  Scotland.47.o1:0 "Scotland Expands Its Influence"
@@ -2054,7 +2057,7 @@ Canada.1.o1:0 "The Revolution will be televised."
   Alaska.7.t:0 "Moving Forward Together"
   Alaska.7.d:0 "The army has successfully withdrawn from Alaska and now the two states stand side by side together ready for a new moment in history to be shared together, no more shall instability and unstable rule condemn the state. From this moment forward Alaska and the American Empire can stand united together."
   Alaska.7.o1:0 "The Moment Is Finally Here"
-  Alaska.8:0 "United Together"
+  Alaska.8.t:0 "United Together"
   Alaska.8.d:0 "Alaska has shown that it can be a free independent nation who can work closely with its brother the Empire, we shall continue supporting the nation and its people until they are ready to decide if they would like to be incorporated into the Empire or if it wishes to remain its own independent state. Whatever Alaska chooses we shall support the people and their decision."
   Alaska.8.o1:0 "We Look Forward To Working Closely With Alaska"
   Alaska.9.t:0 "Prime Minister Sanders Declines Commonwealth Nomination"
@@ -2063,7 +2066,7 @@ Canada.1.o1:0 "The Revolution will be televised."
   Alaska.10.t:0 "Prime Minister Sanders Declines a Third Term"
   Alaska.10.d:0 "After the successful historic withdrawal of American soldiers from the Republic of Alaska, political watchdogs have been looking at Prime Minister Sanders and wondering if he would seek a third term of governance from Parliament.\n\nIn a stunning announcement, the Prime Minister had said that he would not seek a third term due to his age. He would further go onto say that he was proud of the successes which he brought to the Commonwealth party and that America, the Empire at large could only ascend from here.\n\nThis has led to further speculation on who the Commonwealth party could possibly nominate, with many believing Noam Chomsky of the progressive wing to be the next Commonwealth nominee."
   Alaska.10.o1:0 "A Real Shame"
-  Alaska.20:0 "Bringing Alaska Back Under The Empire"
+  Alaska.20.t:0 "Bringing Alaska Back Under The Empire"
   Alaska.20.d:0 "Its been decided, Alaska cannot survive on its own and must be reintegrated back into the Empire, we shall not allow the terrorists to bring down the nation we created. Never shall we bow down to such criminals."
  Alaska.20.o1:0 "God Help Alaska"
  Alaska.50.t:0 "Neo-Beringia Militias in North Alaskan Territories"
