--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -893,6 +893,9 @@
  CAN_moderate_socialist_ADJ:0 "Canadian"
  CAN_revolutionary_socialist_ADJ:0 "Canadian"
  CAN_communist_ADJ:0 "Canadian"
+ CAN_Republic_Of_Canada:0 "Republic Of Canada"
+ CAN_Republic_Of_Canada_DEF:0 "Republic Of Canada"
+ CAN_Republic_Of_Canada_ADJ:0 "Republic Of Canada"
  CEA_fascist:0 "The United States of Central America"
  CEA_fascist_DEF:0 "USCA"
  CEA_nationalist:0 "The United States of Central America"
@@ -5397,28 +5400,28 @@ GUI_Guinea_ADJ:0 "Guinea"
  YEM_moderate_socialist_ADJ:0 "Yemeni"
  YEM_revolutionary_socialist_ADJ:0 "Yemeni"
  YEM_communist_ADJ:0 "Yemeni"
- YUG_fascist:0 "National Union of Yugoslavia"
- YUG_fascist_DEF:0 "The National Union of Yugoslavia"
- YUG_nationalist:0 "Yugoslavian State"
- YUG_nationalist_DEF:0 "Yugoslavian State"
- YUG_monarchist:0 "Kingdom of Yugoslavia"
- YUG_monarchist_DEF:0 "The Kingdom of Yugoslavia"
- YUG_national_bolshevik:0 "Yugoslavian Union"
- YUG_national_bolshevik_DEF:0 "Yugoslavian Union"
- YUG_national_conservative:0 "Yugoslavian Federation"
- YUG_national_conservative_DEF:0 "Yugoslavian Federation"
- YUG_centrist:0 "Yugoslavian Federation"
- YUG_centrist_DEF:0 "Yugoslavian Federation"
- YUG_liberal:0 "Yugoslavian Federation"
- YUG_liberal_DEF:0 "Yugoslavian Federation"
- YUG_new_democrat:0 "Yugoslavian Federation"
- YUG_new_democrat_DEF:0 "Yugoslavian Federation"
- YUG_moderate_socialist:0 "Yugoslavian Federation"
- YUG_moderate_socialist_DEF:0 "Yugoslavian Federation"
- YUG_revolutionary_socialist:0 "SFR Yugoslavia"
- YUG_revolutionary_socialist_DEF:0 "The Socialist Federal Republic of Yugoslavia"
- YUG_communist:0 "PDR Yugoslavia"
- YUG_communist_DEF:0 "The People's Democratic Republic of Yugoslavia"
+ YUG_fascist:0 "National Union of Serbian Republic"
+ YUG_fascist_DEF:0 "The National Union of Serbian Republic"
+ YUG_nationalist:0 "Serbian Republic"
+ YUG_nationalist_DEF:0 "Serbian Republic"
+ YUG_monarchist:0 "Kingdom of Serbia"
+ YUG_monarchist_DEF:0 "The Kingdom of Serbia"
+ YUG_national_bolshevik:0 "Serbian Union"
+ YUG_national_bolshevik_DEF:0 "Serbian Union"
+ YUG_national_conservative:0 "Serbian Republic"
+ YUG_national_conservative_DEF:0 "Serbian Republic"
+ YUG_centrist:0 "Serbian Republic"
+ YUG_centrist_DEF:0 "Serbian Republic"
+ YUG_liberal:0 "Serbian Republic"
+ YUG_liberal_DEF:0 "Serbian Republic"
+ YUG_new_democrat:0 "Serbian Republic"
+ YUG_new_democrat_DEF:0 "Serbian Republic"
+ YUG_moderate_socialist:0 "Serbian Republic"
+ YUG_moderate_socialist_DEF:0 "Serbian Republic"
+ YUG_revolutionary_socialist:0 "SFR Serbian Republic"
+ YUG_revolutionary_socialist_DEF:0 "The Socialist Federal Republic of Serbia"
+ YUG_communist:0 "PDR Serbian Republic"
+ YUG_communist_DEF:0 "The People's Democratic Republic of Serbian Republic"
  YUG_fascist_ADJ:0 "Yugoslav"
  YUG_nationalist_ADJ:0 "Yugoslav"
  YUG_monarchist_ADJ:0 "Yugoslav"
@@ -6869,39 +6872,39 @@ COF_DEF:0 "Commune Of France"
  SLO_moderate_socialist_ADJ:0 "Slovakian"
  SLO_revolutionary_socialist_ADJ:0 "Slovakian"
  SLO_communist_ADJ:0 "Slovakian"
- AUS_fascist:0 "Cisleithanian State"
- AUS_fascist_DEF:0 "The Cisleithanian State"
- AUS_nationalist:0 "Cisleithanian Federation"
- AUS_nationalist_DEF:0 "Cisleithanian Federation"
- AUS_monarchist:0 "Cisleithanian Empire"
- AUS_monarchist_DEF:0 "The Cisleithanian Empire"
- AUS_national_bolshevik:0 "Cisleithanian People's Republic"
- AUS_national_bolshevik_DEF:0 "The Cisleithanian People's Republic"
- AUS_national_conservative:0 "Cisleithanian Federation"
- AUS_national_conservative_DEF:0 "Cisleithanian Federation"
- AUS_centrist:0 "Cisleithanian Federation"
- AUS_centrist_DEF:0 "Cisleithanian Federation"
- AUS_liberal:0 "Cisleithanian Federation"
- AUS_liberal_DEF:0 "Cisleithanian Federation"
- AUS_new_democrat:0 "Cisleithanian Federation"
- AUS_new_democrat_DEF:0 "Cisleithanian Federation"
- AUS_moderate_socialist:0 "Cisleithanian Federation"
- AUS_moderate_socialist_DEF:0 "Cisleithanian Federation"
- AUS_revolutionary_socialist:0 "Cisleithanian Democratic Republic"
- AUS_revolutionary_socialist_DEF:0 "The Cisleithanian Democratic Republic"
- AUS_communist:0 "Cisleithanian DFR"
- AUS_communist_DEF:0 "The Cisleithanian Democratic Federative Republic"
- AUS_fascist_ADJ:0 "Cisleithanian"
- AUS_nationalist_ADJ:0 "Cisleithanian"
- AUS_monarchist_ADJ:0 "Cisleithanian"
- AUS_national_bolshevik_ADJ:0 "Cisleithanian"
- AUS_national_conservative_ADJ:0 "Cisleithanian"
- AUS_centrist_ADJ:0 "Cisleithanian"
- AUS_liberal_ADJ:0 "Cisleithanian"
- AUS_new_democrat_ADJ:0 "Cisleithanian"
- AUS_moderate_socialist_ADJ:0 "Cisleithanian"
- AUS_revolutionary_socialist_ADJ:0 "Cisleithanian"
- AUS_communist_ADJ:0 "Cisleithanian"
+ AUS_fascist:0 "Danubian State"
+ AUS_fascist_DEF:0 "The Danubian State"
+ AUS_nationalist:0 "Danubian Federation"
+ AUS_nationalist_DEF:0 "Danubian Federation"
+ AUS_monarchist:0 "Danubian Federation"
+ AUS_monarchist_DEF:0 "The Danubian Empire"
+ AUS_national_bolshevik:0 "Danubian People's Republic"
+ AUS_national_bolshevik_DEF:0 "The Danubian People's Republic"
+ AUS_national_conservative:0 "Danubian Federation"
+ AUS_national_conservative_DEF:0 "Danubian Federation"
+ AUS_centrist:0 "Danubian Federation"
+ AUS_centrist_DEF:0 "Danubian Federation"
+ AUS_liberal:0 "Danubian Federation"
+ AUS_liberal_DEF:0 "Danubian Federation"
+ AUS_new_democrat:0 "Danubian Federation"
+ AUS_new_democrat_DEF:0 "Danubian Federation"
+ AUS_moderate_socialist:0 "Danubian Federation"
+ AUS_moderate_socialist_DEF:0 "Danubian Federation"
+ AUS_revolutionary_socialist:0 "Danubian Democratic Republic"
+ AUS_revolutionary_socialist_DEF:0 "The Danubian Democratic Republic"
+ AUS_communist:0 "Danubian DFR"
+ AUS_communist_DEF:0 "The Danubian Democratic Federative Republic"
+ AUS_fascist_ADJ:0 "Danubian"
+ AUS_nationalist_ADJ:0 "Danubian"
+ AUS_monarchist_ADJ:0 "Danubian"
+ AUS_national_bolshevik_ADJ:0 "Danubian"
+ AUS_national_conservative_ADJ:0 "Danubian"
+ AUS_centrist_ADJ:0 "Danubian"
+ AUS_liberal_ADJ:0 "Danubian"
+ AUS_new_democrat_ADJ:0 "Danubian"
+ AUS_moderate_socialist_ADJ:0 "Danubian"
+ AUS_revolutionary_socialist_ADJ:0 "Danubian"
+ AUS_communist_ADJ:0 "Danubian"
  CRO_fascist:0 "Independent State of Croatia"
  CRO_fascist_DEF:0 "The Independent State of Croatia"
  CRO_nationalist:0 "Croatia"
